Use proper variable when looping through periphs with CAM_PERIPH_FREE.

PR:		194256
Submitted by:	Scott M. Ferris <smferris@gmail.com>
MFC after:	3 days
Sponsored by:	EMC/Isilon Storage Division

Former-commit-id: 0f3a8d8be086bb31df130eb09e8ff6d3f2e89579